--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-firebase/auth": "^0.2.10",
     "@tailwindcss/vite": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "firebase": "^11.10.0",
@@ -17,6 +18,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
